Mega menu flex opacity

--- a/index.html
+++ b/index.html
@@ -10,104 +10,106 @@
 </head>
 <body>
     <header>
-        <img src="/images/CHOC_Horiz_Logo_1.svg" alt="CHOC Logo" class="logo">
-        <img src="/images/Menu.svg" alt="" class="hamburger-menu">
-        <nav>
-            <div class="container">
-                <ul class="main-menu">
-                    <li>ORGANIZATIONAL OVERVIEW</li>
-                        <div class="sub-menu">
-                            <ul>
-                                <li><a href="">OO1</a></li>
-                                <li><a href="">OO2</a></li>
-                                <li><a href="">OO3</a></li>
-                                <li><a href="">OO4</a></li>
-                                <li><a href="">OO5</a></li>
-                                <li><a href="">OO6</a></li>
-                                <li><a href="">OO7</a></li>
-                                <li><a href="">OO8</a></li>
-                                <li><a href="">OO9</a></li>
-                                <li><a href="">OO10</a></li>
+        <div class="masthead">
+            <img src="/images/CHOC_Horiz_Logo_1.svg" alt="CHOC Logo" class="logo">
+            <img src="/images/Menu.svg" alt="" class="hamburger-menu">
+        </div>
+            <nav>
+                <div class="container">
+                    <ul class="main-menu">
+                        <li>ORGANIZATIONAL OVERVIEW</li>
+                            <div class="sub-menu">
+                                <ul>
+                                    <li><a href="">OO1</a></li>
+                                    <li><a href="">OO2</a></li>
+                                    <li><a href="">OO3</a></li>
+                                    <li><a href="">OO4</a></li>
+                                    <li><a href="">OO5</a></li>
+                                    <li><a href="">OO6</a></li>
+                                    <li><a href="">OO7</a></li>
+                                    <li><a href="">OO8</a></li>
+                                    <li><a href="">OO9</a></li>
+                                    <li><a href="">OO10</a></li>
+                                </ul>
+                            </div>
+                        <li>TRANSFORMATIONAL LEADERSHIP</li>
+                            <ul class="sub-menu">
+                                <li><a href="">TL1</a></li>
+                                <li><a href="">TL2EO</a></li>
+                                <li><a href="">TL3a</a></li>
+                                <li><a href="">TL3b</a></li>
+                                <li><a href="">TL4</a></li>
+                                <li><a href="">TL5EO</a></li>
+                                <li><a href="">TL6</a></li>
+                                <li><a href="">TL7</a></li>
+                                <li><a href="">TL8</a></li>
+                                <li><a href="">TL9EOa</a></li>
+                                <li><a href="">TL9EOc</a></li>
                             </ul>
-                        </div>
-                    <li>TRANSFORMATIONAL LEADERSHIP</li>
-                        <ul class="sub-menu">
-                            <li><a href="">TL1</a></li>
-                            <li><a href="">TL2EO</a></li>
-                            <li><a href="">TL3a</a></li>
-                            <li><a href="">TL3b</a></li>
-                            <li><a href="">TL4</a></li>
-                            <li><a href="">TL5EO</a></li>
-                            <li><a href="">TL6</a></li>
-                            <li><a href="">TL7</a></li>
-                            <li><a href="">TL8</a></li>
-                            <li><a href="">TL9EOa</a></li>
-                            <li><a href="">TL9EOc</a></li>
-                        </ul>
-                    <li>STRUCTURAL EMPOWERMENT</li>
-                        <ul class="sub-menu">
-                            <li><a href="">SE1</a></li>
-                            <li><a href="">SE2</a></li>
-                            <li><a href="">SE3</a></li>
-                            <li><a href="">SE4</a></li>
-                            <li><a href="">SE5</a></li>
-                            <li><a href="">SE6</a></li>
-                            <li><a href="">SE7</a></li>
-                            <li><a href="">SE8</a></li>
-                            <li><a href="">SE9</a></li>
-                            <li><a href="">SE10</a></li>
-                            <li><a href="">SE11</a></li>
-                            <li><a href="">SE12</a></li>
-                            <li><a href="">SE13</a></li>
-                            <li><a href="">SE14</a></li>
-                            <li><a href="">SE15</a></li>
-                            <li><a href="">SE16</a></li>
-                            <li><a href="">SE17</a></li>
-                        </ul>
-                    <li>EXEMPLARY PROFESSIONAL PRACTICE</li>
-                        <ul class="submenu">
-                            <li><a href="">EP1</a></li>
-                            <li><a href="">EP2</a></li>
-                            <li><a href="">EP3</a></li>
-                            <li><a href="">EP4</a></li>
-                            <li><a href="">EP5</a></li>
-                            <li><a href="">EP6</a></li>
-                            <li><a href="">EP7</a></li>
-                            <li><a href="">EP8</a></li>
-                            <li><a href="">EP9</a></li>
-                            <li><a href="">EP10</a></li>
-                            <li><a href="">EP11</a></li>
-                            <li><a href="">EP12</a></li>
-                            <li><a href="">EP13</a></li>
-                            <li><a href="">EP14</a></li>
-                            <li><a href="">EP15</a></li>
-                            <li><a href="">EP16</a></li>
-                            <li><a href="">EP17</a></li>
-                            <li><a href="">EP18</a></li>
-                            <li><a href="">EP19</a></li>
-                            <li><a href="">EP20</a></li>
-                            <li><a href="">EP21</a></li>
-                            <li><a href="">EP22</a></li>
-                            <li><a href="">EP23</a></li>
-                            <li><a href="">EP24</a></li>
-                            <li><a href="">EP25</a></li>
-                        </ul>
-                    <li>NEW KNOWLEDGE, INNOVATIONS, & IMPROVEMENTS</li>
-                        <ul class="submenu">
-                            <li><a href="">NK1</a></li>
-                            <li><a href="">NK2</a></li>
-                            <li><a href="">NK3</a></li>
-                            <li><a href="">NK4</a></li>
-                            <li><a href="">NK5</a></li>
-                            <li><a href="">NK6</a></li>
-                            <li><a href="">NK7</a></li>
-                            <li><a href="">NK8</a></li>
-                            <li><a href="">NK9</a></li>
-                            <li><a href="">NK10</a></li>
-                        </ul>
-                </ul>
-            </div>
-        </nav>
+                        <li>STRUCTURAL EMPOWERMENT</li>
+                            <ul class="sub-menu">
+                                <li><a href="">SE1</a></li>
+                                <li><a href="">SE2</a></li>
+                                <li><a href="">SE3</a></li>
+                                <li><a href="">SE4</a></li>
+                                <li><a href="">SE5</a></li>
+                                <li><a href="">SE6</a></li>
+                                <li><a href="">SE7</a></li>
+                                <li><a href="">SE8</a></li>
+                                <li><a href="">SE9</a></li>
+                                <li><a href="">SE10</a></li>
+                                <li><a href="">SE11</a></li>
+                                <li><a href="">SE12</a></li>
+                                <li><a href="">SE13</a></li>
+                                <li><a href="">SE14</a></li>
+                                <li><a href="">SE15</a></li>
+                                <li><a href="">SE16</a></li>
+                                <li><a href="">SE17</a></li>
+                            </ul>
+                        <li>EXEMPLARY PROFESSIONAL PRACTICE</li>
+                            <ul class="submenu">
+                                <li><a href="">EP1</a></li>
+                                <li><a href="">EP2</a></li>
+                                <li><a href="">EP3</a></li>
+                                <li><a href="">EP4</a></li>
+                                <li><a href="">EP5</a></li>
+                                <li><a href="">EP6</a></li>
+                                <li><a href="">EP7</a></li>
+                                <li><a href="">EP8</a></li>
+                                <li><a href="">EP9</a></li>
+                                <li><a href="">EP10</a></li>
+                                <li><a href="">EP11</a></li>
+                                <li><a href="">EP12</a></li>
+                                <li><a href="">EP13</a></li>
+                                <li><a href="">EP14</a></li>
+                                <li><a href="">EP15</a></li>
+                                <li><a href="">EP16</a></li>
+                                <li><a href="">EP17</a></li>
+                                <li><a href="">EP18</a></li>
+                                <li><a href="">EP19</a></li>
+                                <li><a href="">EP20</a></li>
+                                <li><a href="">EP21</a></li>
+                                <li><a href="">EP22</a></li>
+                                <li><a href="">EP23</a></li>
+                                <li><a href="">EP24</a></li>
+                                <li><a href="">EP25</a></li>
+                            </ul>
+                        <li>NEW KNOWLEDGE, INNOVATIONS, & IMPROVEMENTS</li>
+                            <ul class="submenu">
+                                <li><a href="">NK1</a></li>
+                                <li><a href="">NK2</a></li>
+                                <li><a href="">NK3</a></li>
+                                <li><a href="">NK4</a></li>
+                                <li><a href="">NK5</a></li>
+                                <li><a href="">NK6</a></li>
+                                <li><a href="">NK7</a></li>
+                                <li><a href="">NK8</a></li>
+                                <li><a href="">NK9</a></li>
+                                <li><a href="">NK10</a></li>
+                            </ul>
+                    </ul>
+                </div>
+            </nav>
     </header>
     <main></main>
     <footer></footer>
